IBData updates